[package]
name = "systemfd"
version = "0.4.1"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "A convenient helper for passing sockets into another process.  Best to be combined with listenfd and cargo-watch."
keywords = ["socket", "listenfd", "systemd", "socketactivation", "cargo-watch"]
homepage = "https://github.com/mitsuhiko/systemfd"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = "2.24.0"
regex = "1.3.9"
lazy_static = "1.4.0"
console = "0.15.0"
libc = "0.2.74"
anyhow = "1.0.52"
thiserror = "1.0.30"

[target."cfg(unix)".dependencies]
nix = "0.23.0"

[target."cfg(windows)".dependencies]
socket2 = "0.3.19"
uuid = { version = "0.8.1", features = ["v4"] }
winapi = { version = "0.3.9", features = ["winsock2"] }
