[package]
name = "systemfd"
version = "0.4.1"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "A convenient helper for passing sockets into another process.  Best to be combined with listenfd and cargo-watch."
keywords = ["socket", "listenfd", "systemd", "socketactivation", "cargo-watch"]
homepage = "https://github.com/mitsuhiko/systemfd"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
clap = { version = "4.0.0", features = ["std"], default-features = false }
regex = { version = "1.9.0", features = ["std"], default-features = false }
lazy_static = "1.4.0"
console = "0.15.7"
libc = "0.2.74"
anyhow = "1.0.52"

[target."cfg(unix)".dependencies]
nix = { version = "0.26.0", features = ["net", "process"], default-features = false }

[target."cfg(windows)".dependencies]
socket2 = "0.5.0"
uuid = { version = "1.1.0", features = ["v4"] }
winapi = { version = "0.3.9", features = ["winsock2"] }
