[package]
name = "systemfd"
version = "0.4.6"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
description = "A convenient helper for passing sockets into another process.  Best to be combined with listenfd and cargo-watch."
keywords = ["socket", "listenfd", "systemd", "socketactivation", "cargo-watch"]
homepage = "https://github.com/mitsuhiko/systemfd"
repository = "https://github.com/mitsuhiko/systemfd"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"
rust-version = "1.64.0"

[dependencies]
clap = { version = "4.0.0", features = ["std", "help", "wrap_help"], default-features = false }
regex = { version = "1.9.0", features = ["std"], default-features = false }
lazy_static = "1.4.0"
console = "0.15.8"
anyhow = "1.0.52"

[target."cfg(unix)".dependencies]
nix = { version = "0.26.0", features = ["net", "process"], default-features = false }
libc = "0.2.74"

[target."cfg(windows)".dependencies]
socket2 = "0.5.7"
uuid = { version = "1.1.0", features = ["v4"] }
windows-sys = { version = "0.52.0", features = ["Win32_Networking_WinSock"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
